# OAI

./: README.md
oai-cn5g-ausf-master/: CHANGELOG.md
oai-cn5g-ausf-master/ci-scripts/: Jenkinsfile-GitLab-Docker
oai-cn5g-ausf-master/docker/: Dockerfile.ausf.rhel9  Dockerfile.ausf.ubuntu
oai-cn5g-ausf-master/src/api_server/: CMakeLists.txt  ausf-http2-server.h  ausf_http2-server.cpp
oai-cn5g-ausf-master/src/ausf_app/: CMakeLists.txt  ausf_app.cpp  ausf_config.cpp  ausf_config.hpp  ausf_config_yaml.cpp  ausf_nrf.cpp  ausf_profile.cpp  ausf_profile.hpp
oai-cn5g-ausf-master/src/common/: CMakeLists.txt  ausf.h  logger.hpp
oai-cn5g-ausf-master/src/oai_ausf/: CMakeLists.txt  main.cpp
oai-cn5g-nef-master/3gpp_specs/: TS29502_Nsmf_PDUSession.yaml  TS29503_Nudm_EE.yaml  TS29503_Nudm_MT.yaml  TS29503_Nudm_NIDDAU.yaml  TS29503_Nudm_PP.yaml  TS29503_Nudm_SDM.yaml  TS29503_Nudm_UEAU.yaml  TS29503_Nudm_UECM.yaml  TS29504_Nudr_DR.yaml  TS29504_Nudr_GroupIDmap.yaml  TS29505_Subscription_Data.yaml  TS29515_Ngmlc_Location.yaml  TS29541_Nnef_SMContext.yaml  TS29571_CommonData.yaml  TS29572_Nlmf_Location.yaml  TS29591_Nnef_EventExposure.yaml
oai-cn5g-nef-master/docker/: Dockerfile.nef.rhel8  Dockerfile.nef.ubuntu
oai-cn5g-nef-master/src/oai-nef/: CMakeLists.txt
oai-cn5g-nrf-master/: CHANGELOG.md
oai-cn5g-nrf-master/ci-scripts/: Jenkinsfile-GitLab-Docker
oai-cn5g-nrf-master/docker/: Dockerfile.nrf.rhel9  Dockerfile.nrf.rocky9  Dockerfile.nrf.ubuntu
oai-cn5g-nrf-master/src/api-server/: CMakeLists.txt  nrf-http2-server.cpp  nrf-http2-server.h
oai-cn5g-nrf-master/src/common/: CMakeLists.txt  api_conversions.cpp  api_conversions.hpp  logger.hpp  nrf.h  nrf_sbi_helper.cpp  nrf_sbi_helper.hpp
oai-cn5g-nrf-master/src/nrf_app/: CMakeLists.txt  nrf_app.cpp  nrf_app.hpp  nrf_client.cpp  nrf_client.hpp  nrf_profile.cpp  nrf_profile.hpp  task_manager.cpp  task_manager.hpp
oai-cn5g-nrf-master/src/oai-nrf/: CMakeLists.txt  main.cpp
oai-cn5g-nssf-master/: CHANGELOG.md
oai-cn5g-nssf-master/src/: CODEOWNERS
oai-cn5g-nssf-master/src/api-server/: CMakeLists.txt  nssf-http2-server.cpp  nssf-http2-server.h
oai-cn5g-nssf-master/src/common/: logger.hpp  nssf.h
oai-cn5g-nssf-master/src/nssf_app/: CMakeLists.txt  nssf_app.cpp  nssf_app.hpp  nssf_config.cpp  nssf_config.hpp  nssf_config_types.cpp  nssf_config_types.hpp  nssf_slice_availability.cpp  nssf_slice_availability.hpp  nssf_slice_selection.cpp  nssf_slice_selection.hpp
oai-cn5g-nssf-master/src/oai_nssf/: CMakeLists.txt  main.cpp
oai-cn5g-pcf-master/: CHANGELOG.md
oai-cn5g-pcf-master/docker/: Dockerfile.pcf.rhel9  Dockerfile.pcf.rocky9  Dockerfile.pcf.ubuntu
oai-cn5g-pcf-master/src/api-server/: CMakeLists.txt  pcf-http2-server.cpp  pcf-http2-server.hpp
oai-cn5g-pcf-master/src/oai_pcf/: CMakeLists.txt  main.cpp
oai-cn5g-pcf-master/src/pcf_app/: CMakeLists.txt  logger.hpp  pcf_app.hpp  pcf_event.hpp  pcf_nrf.cpp  pcf_nrf.hpp  pcf_profile.cpp  pcf_profile.hpp  pcf_sm_policy_control.cpp  pcf_sm_policy_control.hpp
oai-cn5g-smf-master/: CHANGELOG.md
oai-cn5g-smf-master/ci-scripts/: Jenkinsfile-GitLab-Docker
oai-cn5g-smf-master/docker/: Dockerfile.smf.rhel9  Dockerfile.smf.rocky9  Dockerfile.smf.ubuntu
oai-cn5g-smf-master/src/api-server/: CMakeLists.txt  smf-http2-server.cpp  smf-http2-server.h
oai-cn5g-smf-master/src/common/: 3gpp_29.244.h  3gpp_29.503.h  CMakeLists.txt  endpoint.hpp  logger.hpp  smf.h
oai-cn5g-smf-master/src/nas/: CMakeLists.txt
oai-cn5g-smf-master/src/oai_smf/: CMakeLists.txt  main.cpp
oai-cn5g-smf-master/src/pfcp/: 3gpp_29.244.hpp  CMakeLists.txt  pfcp.hpp
oai-cn5g-smf-master/src/smf_app/: CMakeLists.txt  session_handler.cpp  session_handler.hpp  (+25 more)
oai-cn5g-udm-master/: CHANGELOG.md
oai-cn5g-udm-master/ci-scripts/: Jenkinsfile-GitLab-Docker
oai-cn5g-udm-master/docker/: Dockerfile.udm.rhel9  Dockerfile.udm.rocky9  Dockerfile.udm.ubuntu
oai-cn5g-udm-master/etc/: config.yaml
oai-cn5g-upf-master/: CHANGELOG.md
oai-cn5g-upf-master/docker/: Dockerfile.upf.rhel9  Dockerfile.upf.rocky9  Dockerfile.upf.ubuntu
oai-cn5g-upf-master/etc/: config.yaml
oai-cn5g-upf-master/src/upf_app/: CMakeLists.txt  SessionManager.cpp  SessionManager.h  SessionProgramManager.cpp  SessionProgramManager.h  SessionPrograms.h  SignalHandler.cpp  UserPlaneComponent.cpp  UserPlaneComponent.h
oai-cn5g-upf-master/src/upf_app/app/: CMakeLists.txt  upf_app.cpp  upf_app.hpp  upf_config.cpp  upf_config.hpp  upf_config_yaml.cpp  upf_config_yaml.hpp  upf_nrf.cpp  upf_nrf.hpp  upf_profile.cpp  upf_profile.hpp
oai-cn5g-upf-master/src/upf_app/bpf/: CMakeLists.txt
oai-cn5g-upf-master/src/upf_app/bpf/ie/: source_interface.h
oai-cn5g-upf-master/src/upf_app/bpf/rules/far/: far_maps.h  far_xdp_kernel.c
oai-cn5g-upf-master/src/upf_app/bpf/rules/include/: interfaces_map.h  pfcp_session_lookup_maps.h  pfcp_session_pdr_lookup_maps.h  session_id.h  xdp_stats_kern.h
oai-cn5g-upf-master/src/upf_app/bpf/rules/pdr/: next_prog_rule_map.h  pfcp_session_lookup_xdp_kernel.c  pfcp_session_pdr_lookup_xdp_kernel.c
oai-cn5g-upf-master/src/upf_app/bpf/rules/qer/: filter_key.h  qer_maps.h  qer_tc_kernel.c  qos_flow.h
oai-cn5g-upf-master/src/upf_app/cmake/: FindLibNL.cmake
oai-cn5g-upf-master/src/upf_app/helpers/: CmdRunner.cpp  CmdRunner.hpp  GetNicInformation.cpp  GetNicInformation.hpp  NextHopFinder.cpp  NextHopFinder.hpp
oai-cn5g-upf-master/src/upf_app/include/bpf/: bpf.h  bpf_core_read.h  bpf_helpers.h  bpf_tracing.h  btf.h  libbpf.h  libbpf_common.h  libbpf_legacy.h  libbpf_util.h  skel_internal.h  usdt.bpf.h  xsk.h
oai-cn5g-upf-master/src/upf_app/interfaces/: CMakeLists.txt
oai-cn5g-upf-master/src/upf_app/programs/: BPFProgram.cpp  ProgramLifeCycle.hpp  far_xdp_user.cpp  far_xdp_user.h  pfcp_session_lookup_xdp_user.cpp  pfcp_session_lookup_xdp_user.h  pfcp_session_pdr_lookup_xdp_user.cpp  pfcp_session_pdr_lookup_xdp_user.h  qer_tc_user.cpp  qer_tc_user.h
oai-cn5g-upf-master/src/upf_app/simpleswitch/: CMakeLists.txt  pfcp_qer.cpp  pfcp_qer.hpp  pfcp_session.cpp  pfcp_session.hpp  pfcp_switch.cpp  pfcp_switch.hpp
(+141 files in other folders)
